[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/players/player.png" type="Texture" id=1]
[ext_resource path="res://characters/player_control/Player.gd" type="Script" id=2]
[ext_resource path="res://characters/player_control/PlayerCamera.gd" type="Script" id=3]
[ext_resource path="res://assets/players/aim.png" type="Texture" id=4]
[ext_resource path="res://characters/player_control/Aim.gd" type="Script" id=5]
[ext_resource path="res://assets/players/gun.png" type="Texture" id=6]
[ext_resource path="res://assets/players/progress_bar.png" type="Texture" id=7]
[ext_resource path="res://assets/players/progress.png" type="Texture" id=8]
[ext_resource path="res://assets/players/progress_start.png" type="Texture" id=9]
[ext_resource path="res://assets/players/progress_end.png" type="Texture" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 17, 41 )

[node name="Player" type="RigidBody2D"]
mode = 2
mass = 5.10204
gravity_scale = 9.8
contacts_reported = 1
contact_monitor = true
script = ExtResource( 2 )

[node name="PlayerSprite" type="Sprite" parent="."]
position = Vector2( 0.999994, 0 )
scale = Vector2( 1.65236, 1.65236 )
texture = ExtResource( 1 )

[node name="PlayerCamera" type="Camera2D" parent="."]
current = true
zoom = Vector2( 1.5, 1.5 )
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 8.0
drag_margin_left = 0.5
drag_margin_right = 0.5
editor_draw_drag_margin = true
script = ExtResource( 3 )

[node name="PlayerCollision" type="CollisionShape2D" parent="."]
position = Vector2( 1, 0 )
shape = SubResource( 1 )

[node name="Progress" type="Node2D" parent="."]
position = Vector2( -32, 47 )
z_index = 99

[node name="ProgressBar" type="TextureProgress" parent="Progress"]
margin_right = 61.0
margin_bottom = 10.0
value = 50.0
texture_under = ExtResource( 8 )
texture_progress = ExtResource( 7 )
nine_patch_stretch = true

[node name="ProgressStart" type="TextureRect" parent="Progress"]
margin_right = 4.0
margin_bottom = 10.0
texture = ExtResource( 9 )
expand = true

[node name="ProgressEnd" type="TextureRect" parent="Progress"]
visible = false
margin_left = 57.0
margin_right = 61.0
margin_bottom = 10.0
texture = ExtResource( 10 )
expand = true

[node name="Aim" type="RayCast2D" parent="."]
position = Vector2( 0, 6 )
cast_to = Vector2( 600, 0 )
script = ExtResource( 5 )

[node name="AimSprite" type="Sprite" parent="Aim"]
position = Vector2( 64, 0 )
scale = Vector2( 0.113938, 0.113938 )
z_index = 98
texture = ExtResource( 4 )
offset = Vector2( 1000, 0 )

[node name="GunSprite" type="Sprite" parent="Aim"]
position = Vector2( 0, -5 )
scale = Vector2( 0.846154, 0.846154 )
texture = ExtResource( 6 )
centered = false

[node name="DodgeTimeOut" type="Timer" parent="."]
wait_time = 2.5
autostart = true

[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Player_body_exited"]
[connection signal="timeout" from="DodgeTimeOut" to="." method="_on_DodgeTimeOut_timeout"]
